updates for testing on monday

--- a/app/views/account/index.html
+++ b/app/views/account/index.html
@@ -11,7 +11,7 @@
     <div class="column-full">
 
       <h1 class="heading-large">
-		  DIT {{ data['organiser-name'] }} events
+		  DIT South West events
       </h1>
 
 		<!--  TABS FOR TYPES OF EVENT STATUS  -->
@@ -41,8 +41,6 @@
 				<div class="tabs-panel" id="live-events" style="border-top:1px solid #bfc1c3;">
 					<div class="tabs-panel-inner">
 						{% include "includes/live-events.html" %}
-
-
 					</div>
 				</div>
 
