--- a/app/views/create-event/additional-questions.html
+++ b/app/views/create-event/additional-questions.html
@@ -61,7 +61,7 @@
 
 
 	  <h1 class="heading-large" style="margin-top:15px">
-		  Question {{ data['additional-questions-incrementer'] }}
+		  New question {{ data['additional-questions-incrementer'] }}
       </h1>
 
 
