--- a/app/views/create-event/images-preview.html
+++ b/app/views/create-event/images-preview.html
@@ -79,7 +79,7 @@
 
 			<p class="bold" style="margin-top:20px; margin-bottom:10px;">Image preview</p>
 
-			<img src="/public/images/exporting-generic.jpg" style="width:300px;height:200px;">
+			<img src="/public/images/oil.png" style="width:300px;height:200px;">
 
 			<div>
 				<p style="margin-bottom:0;">We've cropped your image.</p>
