--- a/app/views/create-event/summary.html
+++ b/app/views/create-event/summary.html
@@ -416,7 +416,7 @@
 				  	  <dd class="cya-answer bold">Required field, incomplete.</dd>
 				  {% else %}
 					  <dd class="cya-answer">
-						  <img src="/public/images/exporting-generic.jpg" style="width:300px; height:200px;">
+						  <img src="/public/images/oil.png" style="width:300px; height:200px;">
 					  </dd>
 				  {% endif %}
 
@@ -556,8 +556,8 @@
 						  <li>email address</li>
 						  <li>primary sector of business</li>
 						  <li>company website (optional)</li>
-						  <li>annual turnover</li>
 						  <li>export experience level</li>
+						  <li>annual turnover</li>
 					  </ul>
 				  </dd>
 				  <dd class="cya-change">  </dd>
