--- a/app/views/includes/draft-events.html
+++ b/app/views/includes/draft-events.html
@@ -61,8 +61,8 @@
         <div class="panel panel-border-narrow">
           <ul>
             <li style="margin-bottom:3px;"><span>Share draft: </span>&nbsp;www.great.gov.uk/event/mh43dz</li>
-            <li style="margin-bottom:3px;"><a href="/summary-data/{{itemRow}}/true">Edit page</a></li>
-            <li style="margin-bottom:3px;"><a href="/clone-event/{{itemRow}}/true">Clone event</a></li>
+            <li style="margin-bottom:3px;"><a href="/summary-data/{{itemRow}}/false">Edit page</a></li>
+            <li style="margin-bottom:3px;"><a href="/clone-event/{{itemRow}}/false">Clone event</a></li>
             <li style="margin-bottom:3px;"><a href="#">Delete</a></li>
             <li style="margin-bottom:3px;">
               <div style="margin-left:0px; margin-top:20px;">
