--- a/app/views/monitor/live-present.html
+++ b/app/views/monitor/live-present.html
@@ -119,7 +119,11 @@ GOV.UK prototype kit
                     <div>
 
                       <p style="margin-bottom:5px">Total registrations</p>
-                      <p class="heading-xlarge" style="margin-top:0px; margin-bottom:30px;">{{ data['attendee-reg-count'] }}</p>
+                      {% if 0 < session.data['attendee-reg-count'] %}
+                          <p class="heading-xlarge" style="margin-top:0px; margin-bottom:30px;">{{ data['attendee-reg-count'] }}</p>
+                      {% else %}
+                          <p class="heading-xlarge" style="margin-top:0px; margin-bottom:30px;">0</p>
+                      {% endif %}
 
                       {% if 1 < session.eventsLiveURLS[session.currentEventShowing][0].length %}
                           <p class="heading-small" style="margin-bottom:0px;">Uncategorised (default link)</p>
