--- a/app/views/create-event/venue.html
+++ b/app/views/create-event/venue.html
@@ -122,7 +122,8 @@
 						  Enter valid postcode
 					  </span>
 				  {% endif %}
-				  <input class="form-control {% if errorPostcode or errorPostcodeMissing%} form-control-error {% endif %}" id="postcode" type="text" name="postcode" style="width:25%"  value="{{ data['postcode'] }}">
+				  <input class="form-control {% if errorPostcode or errorPostcodeMissing%} form-control-error {% endif %}" id="postcode" type="text" name="postcode" style="width:25%"
+						 value="{{ session.data['postcode'] }}">
 
 			  	</div>
 
@@ -146,10 +147,10 @@
 					  <label class="form-label-bold" for="map-url"  style="margin-bottom:5px;">Link to map</label>
 
 					  <div id="default-map-link">
-						  <input type="submit" class="button-secondary" formaction="/create-event/venue-check-map" value="Check map location">
+						  <p><a class="button-secondary" style=" padding: .526315em .789473em .263157em;  font-size: 1em;   line-height: 1.25;
+              " onclick="openLinkorValidate()">Check map location</a></p>
 						  <p style="margin-top:20px;">Or you can <span style="color: #006ea5; text-decoration: underline; cursor: pointer;" onclick="showManualUrlEntry()">enter your own link</span> if you wish.</p>
 					  </div>
-
 
 					  <div id="manual-map-entry" style="display:none;">
 						  <p style="margin-bottom:0;">Paste link to map</p>
@@ -193,6 +194,25 @@
 			document.getElementById('default-map-link').style.display = 'block';
 			document.getElementById('manual-map-entry').style.display = 'none';
 		}
+
+		function openLinkorValidate()
+		{
+			//alert("postcode is " + document.getElementById('building').value.length);
+
+			if (document.getElementById('venue').value.length == 0  ||
+				document.getElementById('building').value.length == 0  ||
+				document.getElementById('town').value.length == 0  ||
+				document.getElementById('postcode').value.length == 0 )
+			{
+				window.location = "/create-event/venue-onwards";
+			}
+			else  // otherwise show addresss
+			{
+				window.open("https://www.google.co.uk/maps/place/Royal+Devon+and+Exeter+Hospital/@50.7162594,-3.5088454,17z/data=!3m1!4b1!4m5!3m4!1s0x486da40437265199:0xb269d663e3730e3b!8m2!3d50.7162594!4d-3.5066567", '_blank');
+			}
+
+		}
+
 	</script>
 
 
