--- a/app/views/includes/live-events.html
+++ b/app/views/includes/live-events.html
@@ -47,7 +47,8 @@
 
       <td valign="top" style="border: 0px; padding-top: 2px; padding-bottom: 12px; ">
         <a href="/monitor-event/{{itemRow}}/true">Monitor and track</a>  &nbsp; &nbsp; &nbsp;
-        <a href="/preview-data/{{itemRow}}/true">View web page</a></td>
+        <a href="/preview-data/{{itemRow}}/true">View web page</a>
+      </td>
 
       <td valign="top" style=" border: 0px; padding-right: 0px; padding-top: 2px; padding-bottom: 12px;">
         <details style="display:inline;">
