--- a/app/views/includes/great-header-preview-page.html
+++ b/app/views/includes/great-header-preview-page.html
@@ -85,7 +85,7 @@ main#content {max-width: 1200px}
     <!-- These require the ""  -->
     {% elif session.liveOrNot == "true" %}
 
-        <div style="background-color: #FFFFFF; border-bottom: 10px solid #000000; height:360px; padding-top:0px; padding-bottom:10px; display: flex; " >
+        <div style="background-color: #FFFFFF; border-bottom: 10px solid #000000; height:410px; padding-top:0px; padding-bottom:10px; display: flex; " >
 
             <div style="flex-grow:1"> </div>
 
@@ -100,6 +100,8 @@ main#content {max-width: 1200px}
 
                 <div>
                     <p style="font-size:16px; margin-top:30px;" align="left"><a style="font-family: Arial,sans-serif;" href="/create-event/summary">View event summary</a></p>
+
+                    <p style="font-size:16px; "><a href="/create-event/go-live-now">Change page visibility</a></p>
 
                     <p style="font-size:16px; " align="left"><a style="font-family: Arial,sans-serif;" href="#">Track and monitor this event</a></p>
 
