--- a/app/views/create-event/summary.html
+++ b/app/views/create-event/summary.html
@@ -123,7 +123,7 @@
 			  {% if session.data['radio-link-access'] != undefined  and  session.data['radio-link-access'] != ""  %}
 				  <div>
 					  <dt class="cya-question">
-						  Visibility
+						  Page visibility
 					  </dt>
 
 					  <dd class="cya-answer">{{ session.data['radio-link-access'] }}</dd>
