--- a/app/views/monitor/live-present.html
+++ b/app/views/monitor/live-present.html
@@ -176,6 +176,9 @@ GOV.UK prototype kit
             <div class="tabs-panel" id="track-links" >
               <div class="tabs-panel-inner " style="margin-top:20px;">
 
+
+                <p style="margin-top:30px; margin-bottom:0px;"><span class="bold">Page visibility:</span> {{ session.data['radio-link-access'] }}</p>
+
                 {% include "includes/tracking-links.html" %}
 
               </div>
