--- a/app/views/create-event/preview.html
+++ b/app/views/create-event/preview.html
@@ -47,7 +47,7 @@
 
           <br/>
 
-          <h3 style="font-size:18px;font-weight:normal">{{ data['event-summary'] }}</h3>
+          <h3 style="font-size:18px;font-weight:normal">{{ data['summary-title'] }}</h3>
 
           <br/>
 
