--- a/app/views/index.html
+++ b/app/views/index.html
@@ -22,7 +22,15 @@
       </h1>
 
 
-      <h2 class="heading-medium">September 2017</h2>
+      <h2 class="heading-medium">November 2017</h2>
+
+      <br/>
+      <li><a href="/event-page">Event page</a></li>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+
 
       <ul>
         <!-- <li><a href="/scenario-empty">Scenario one</a></li> -->
