updates to registration wit eb

--- a/app/views/event-page.html
+++ b/app/views/event-page.html
@@ -76,7 +76,7 @@
 
           <br/>
           <div style="display: flex; flex-direction: row;" >
-              <a href="/register-for-event" class="button button-blue">Register to meet buyers</a>
+              <a href="/register/sign-in-or-create-account-eventbrite" class="button button-blue">Register to meet buyers</a>
               <p style="padding-top:15px; margin-left: 25px; margin-bottom:0px; font-family: arial, helvetica, sans-serif; font-weight: 500; font-size: 18px;">Free</p>
           </div>
 
