updated contet and fixes

--- a/app/views/event-page.html
+++ b/app/views/event-page.html
@@ -464,12 +464,12 @@ On the day of the event, UK sellers meet up with international buyers. Both part
 Carrefour Charles Lindbergh
 Le Bourget, Île-de-France</p>
 
-                  <p class="link-style"><a href="{{session.data['map-url']}}"  target="_blank">View on a map</a></p>
+                  <p class="link-style"><a href="https://www.google.com/maps?q=Carrefour+Charles+Lindbergh,+Le+Bourget,+%C3%8Ele-de-France"  target="_blank">View on a map</a></p>
 
                       <details>
-                          <summary>Parking and directions</summary>
+                          <summary class="summary">Parking and directions</summary>
 
-                          <div>On site parking for a fee.</div>
+                          <div style="border-left: 3px solid #00549f; padding:10px;">On site parking for a fee.</div>
                       </details>
           </div>
 
@@ -480,7 +480,7 @@ Le Bourget, Île-de-France</p>
               <br>
               <details>
                   <summary class="summary">Day 1 - Sunday</summary>
-                  <div>
+                  <div style="border-left: 3px solid #00549f; padding:10px;">
                       <li>9:00 am - 10:00am<br>Speaker panel</li>
                       <br>
                       <li>10:00 am - 1:00 pm<br>Meet the buyer<br></li>
@@ -494,7 +494,7 @@ Le Bourget, Île-de-France</p>
               <br>
               <details>
                   <summary class="summary">Day 2 - Monday</summary>
-                  <div>
+                  <div style="border-left: 3px solid #00549f; padding:10px;">
                       <li>9:00 am - 10:00am<br>Speaker panel</li>
                       <br>
                       <li>10:00 am - 1:00 pm<br>Meet the buyer<br></li>
@@ -508,7 +508,7 @@ Le Bourget, Île-de-France</p>
               <br>
               <details>
                   <summary class="summary">Day 3 - Tuesday</summary>
-                  <div>
+                  <div style="border-left: 3px solid #00549f; padding:10px;">
                       <li>9:00 am - 10:00am<br>Speaker panel</li>
                       <br>
                       <li>10:00 am - 1:00 pm<br>Meet the buyer<br></li>
@@ -522,7 +522,7 @@ Le Bourget, Île-de-France</p>
               <br>
               <details>
                   <summary class="summary">Day 4 - Wednesday</summary>
-                  <div>
+                  <div style="border-left: 3px solid #00549f; padding:10px;">
                       <li>9:00 am - 10:00am<br>Speaker panel</li>
                       <br>
                       <li>10:00 am - 1:00 pm<br>Meet the buyer<br></li>
@@ -536,7 +536,7 @@ Le Bourget, Île-de-France</p>
               <br>
               <details>
                   <summary class="summary">Day 5 - Thursday</summary>
-                  <div>
+                  <div style="border-left: 3px solid #00549f; padding:10px;">
                       <li>9:00 am - 10:00am<br>Speaker panel</li>
                       <br>
                       <li>10:00 am - 1:00 pm<br>Meet the buyer<br></li>
