picturees for filip b2match

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -25,9 +25,14 @@
       <h2 class="heading-medium">November 2017</h2>
 
       <br/>
-      <li><a href="/event-page">Event page</a></li>
+      <p><a href="/event-page">Event page</a></p>
       <br/>
       <br/>
+      <p><a href="/event-page">B2Match 1</a></p>
+      <p><a href="/event-page">Event page</a></p>
+      <p><a href="/event-page">Event page</a></p>
+      <p><a href="/event-page">Event page</a></p>
+      <p><a href="/event-page">Event page</a></p>
       <br/>
       <br/>
 
