more filip stuff

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -28,11 +28,11 @@
       <p><a href="/event-page">Event page</a></p>
       <br/>
       <br/>
-      <p><a href="/event-page">B2Match 1</a></p>
-      <p><a href="/event-page">Event page</a></p>
-      <p><a href="/event-page">Event page</a></p>
-      <p><a href="/event-page">Event page</a></p>
-      <p><a href="/event-page">Event page</a></p>
+      <p><a href="/b2match1">B2Match 1</a></p>
+      <p><a href="/b2match2">B2Match 2</a></p>
+      <p><a href="/b2match3">B2Match 3</a></p>
+      <p><a href="/b2match4">B2Match 4</a></p>
+      <p><a href="/b2match5">B2Match 5</a></p>
       <br/>
       <br/>
 
