--- a/app/views/event-page.html
+++ b/app/views/event-page.html
@@ -38,7 +38,7 @@
 
 
           <br/>
-            <h3 style="font-size:18px;font-weight:normal">{{ data['summary-title'] }}</h3>
+            <h3 style="font-size:18px;font-weight:normal">Connect with 200 major retail buyers over the course of 4 days, at Tradexpo Paris.</h3>
           <br/>
 
 
@@ -76,14 +76,14 @@
 
           <br/>
           <div style="display: flex; flex-direction: row;" >
-              <a href="/register/sign-in-or-create-account-eventbrite" class="button button-blue">Register to meet buyers</a>
+              <a href="/register/sign-in-or-create-account-eventbrite" class="button button-blue">Register</a>
               <p style="padding-top:15px; margin-left: 25px; margin-bottom:0px; font-family: arial, helvetica, sans-serif; font-weight: 500; font-size: 18px;">Free</p>
           </div>
 
 
             <div style="margin-bottom:30px; margin-top:20px;">
                 <h4 class="bold-small">Eligibility</h4>
-                <p style="white-space: pre-line;" >You must also have a ticket to the tradeshow to meet buyers.</p>
+                <p style="white-space: pre-line;" >This 'Meet the buyer' series takes place within Tradexpo Paris. To attend, you need to have also registered for general entry to Tradexpo.</p>
             </div>
 
 
@@ -146,7 +146,7 @@ div.panel-accordian
                             <p style="margin-top:0px;">France</p>
 
                             <p class="bold" style=" margin-top:20px; margin-bottom:5px;">Marie Dugary</p>
-                            <p style=" margin-top:0px;">Merchandising Director</p>
+                            <p style=" margin-top:0px;">CEO</p>
                         </div>
                         <!-- fill space -->
                         <div style="flex-grow: 1;">
@@ -293,7 +293,7 @@ div.panel-accordian
                             <p style="margin-top:0px;">Germany</p>
 
                             <p class="bold" style=" margin-top:20px; margin-bottom:5px;">Marie Dugary</p>
-                            <p style=" margin-top:0px;">Merchandising Director</p>
+                            <p style=" margin-top:0px;">Chief Buyer</p>
                         </div>
                         <!-- fill space -->
                         <div style="flex-grow: 1;">
@@ -354,7 +354,7 @@ div.panel-accordian
                             <p style="margin-top:0px;">France</p>
 
                             <p class="bold" style=" margin-top:20px; margin-bottom:5px;">Geoffroy Mélody</p>
-                            <p style=" margin-top:0px;">Merchandising Director</p>
+                            <p style=" margin-top:0px;">Business Development Manager</p>
                         </div>
                         <!-- fill space -->
                         <div style="flex-grow: 1;">
@@ -417,7 +417,7 @@ On the day of the event, UK sellers meet up with international buyers. Both part
 
 
               <div style="display: flex; flex-direction: row;" >
-                  <a href="/register-for-event" class="button button-blue">Register to meet buyers</a>
+                  <a href="/register-for-event" class="button button-blue">Register</a>
                   <p style="padding-top:15px; margin-left: 25px; margin-bottom:0px; font-family: arial, helvetica, sans-serif; font-weight: 500; font-size: 18px;">Free</p>
               </div>
 
