--- a/app/views/register/sign-in-or-create-account-eventbrite.html
+++ b/app/views/register/sign-in-or-create-account-eventbrite.html
@@ -37,6 +37,7 @@
 		  <p  style="text-decoration: underline;"><a href="/register/business-name">Create an account</a></p>
  <!-- Noscript content for added SEO -->
 <noscript><a href="https://www.eventbrite.co.uk/e/dit-meet-the-buyer-at-tradexpo-tickets-39948447883" rel="noopener noreferrer" target="_blank"></noscript>
+  
 <!-- You can customize this button any way you like -->
 <button id="eventbrite-widget-modal-trigger-39948447883" class="link" type="button">Register and create an account</button>
 <noscript></a>Buy Tickets</noscript>
@@ -46,7 +47,7 @@
 <script type="text/javascript">
     var exampleCallback = function() {
         console.log('Order complete!');
-        window.location.replace("confirmation-page?event_id=$event_id&order_id=$order_id");
+        window.location.replace("https://events-middleman-app.herokuapp.com/confirmation-page?event_id=$event_id&order_id=$order_id");
     };
 
     window.EBWidgets.createWidget({
