up medjool dates

--- a/app/views/register/sign-in-or-create-account-eventbrite.html
+++ b/app/views/register/sign-in-or-create-account-eventbrite.html
@@ -34,12 +34,12 @@
 
 		  <p class="bold">Don't have an account yet?</p>
 
-		  <p  style="text-decoration: underline;"><a href="/register/business-name">Create an account</a></p>
  <!-- Noscript content for added SEO -->
 <noscript><a href="https://www.eventbrite.co.uk/e/dit-meet-the-buyer-at-tradexpo-tickets-39948447883" rel="noopener noreferrer" target="_blank"></noscript>
-  
+
 <!-- You can customize this button any way you like -->
-<button id="eventbrite-widget-modal-trigger-39948447883" class="link" type="button">Register and create an account</button>
+<button id="eventbrite-widget-modal-trigger-39948447883" class="link" type="button" style="margin-bottom:10px;padding-left:0;font-size: 19px;text-shadow: none;border: 0;
+    text-decoration: underline;">Create an account</button>
 <noscript></a>Buy Tickets</noscript>
 
 <script src="https://www.eventbrite.co.uk/static/widgets/eb_widgets.js"></script>
