update to register button

--- a/app/views/event-page.html
+++ b/app/views/event-page.html
@@ -417,7 +417,7 @@ On the day of the event, UK sellers meet up with international buyers. Both part
 
 
               <div style="display: flex; flex-direction: row;" >
-                  <a href="/register-for-event" class="button button-blue">Register</a>
+                  <a href="/register/sign-in-or-create-account-eventbrite" class="button button-blue">Register</a>
                   <p style="padding-top:15px; margin-left: 25px; margin-bottom:0px; font-family: arial, helvetica, sans-serif; font-weight: 500; font-size: 18px;">Free</p>
               </div>
 
