updates to event page and reg page

--- a/app/views/register/sign-in-or-create-account-eventbrite.html
+++ b/app/views/register/sign-in-or-create-account-eventbrite.html
@@ -71,7 +71,21 @@
     </div>
 
 <div class="column-one-third">
-	{% include "includes/basket.html" %} 
+    <div class="panel panel--info ">
+        <p>You're booking tickets for</p>
+        <h4 class="heading-small">DIT ‘Meet the buyer’ at Tradexpo</h4>
+        <ul>
+            <div class="bold-xsmall" style="margin-top:15px">Date and time</div>
+            <li style="font-size:16px">Sunday 14 to Thursday 18 January 2018</li>
+            <li style="font-size:16px">9am to 5pm<br /><br /></li>
+            <div class="bold-xsmall">Location</div>
+            <li style="font-size:16px;white-space: pre-wrap;">Palais des Expositions
+                Carrefour Charles Lindbergh
+                Le Bourget, Île-de-France</li>
+        </ul>
+        <br>
+        <p>Free</p>
+    </div>
 </div>
 
   </div>
