more evnt pages updates

--- a/app/views/event-page.html
+++ b/app/views/event-page.html
@@ -122,7 +122,7 @@ button.accordion {
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
 button.accordion-accordian, button.accordion:hover
 {
-    background-color: #eee;
+    background-color: #ddd;
 }
 
 /* Style the accordion panel. Note: hidden by default */
@@ -142,7 +142,7 @@ div.panel-accordian
 </style>
 
 
-                <button class="accordion">Clothing, footwear and fashion buyers (2)</button>
+                <button class="accordion">Clothing, footwear and fashion buyers (2)  &nbsp;˅</button>
                 <div class="panel-accordian">
                     <div style="display: flex; flex-direction: row;">
                         <div>
@@ -192,7 +192,7 @@ div.panel-accordian
                     <p style="margin:20px;">To be added soon.</p>
                 </div>
 
-                <button class="accordion">Retail and luxury (3)</button>
+                <button class="accordion">Retail and luxury (3) &nbsp;˅</button>
                 <div class="panel-accordian">
                     <div style="display: flex; flex-direction: row;">
                         <div>
@@ -289,7 +289,7 @@ div.panel-accordian
                     <p style="margin:20px;">To be added soon.</p>
                 </div>
 
-                <button class="accordion">Household goods, furniture and furnishings (3)</button>
+                <button class="accordion">Household goods, furniture and furnishings (3)  &nbsp;˅</button>
                 <div class="panel-accordian">
                     <div style="display: flex; flex-direction: row;">
                         <div>
