event page updates

--- a/app/views/event-page.html
+++ b/app/views/event-page.html
@@ -34,11 +34,13 @@
 
         <h1 class="bold-large">DIT ‘Meet the buyer’ at Tradexpo</h1>
 
-          <h2 class="font-lead">14  to 18 January 2018 in Paris</h2>
+          <h2 class="font-lead">14  to 18 January 2018 in Paris, France.</h2>
 
 
           <br/>
-            <h3 style="font-size:18px;font-weight:normal">Connect with 200 major retail buyers over the course of 4 days, at Tradexpo Paris.</h3>
+            <h3 style="font-size:18px;font-weight:normal">Connect with 200 major retail buyers over the course of 4 days, at Tradexpo Paris</h3>
+
+            <p>'Meet the buyer' series is part of the wider Tradexpo Paris event - to attend, you need to have also registered for general entry to Tradexpo.</p>
           <br/>
 
 
@@ -77,17 +79,15 @@
 
             <div style="margin-bottom:30px; margin-top:20px;">
                 <h4 class="bold-small">Eligibility</h4>
-                <p style="white-space: pre-line;" >This 'Meet the buyer' series takes place within Tradexpo Paris. To attend, you need to have also registered for general entry to Tradexpo.</p>
+                <p style="white-space: pre-line;" >To attend this ‘Meet the buyer’ event, you need to have registered for general entry to Tradexpo Paris.</p>
             </div>
 
 
 
           <div style="display: flex; flex-direction: row;" >
               <a href="/register/sign-in-or-create-account-eventbrite" class="button button-blue">Register</a>
-              <p style="padding-top:15px; margin-left: 25px; margin-bottom:0px; font-family: arial, helvetica, sans-serif; font-weight: 500; font-size: 18px;">Free</p>
+              <p style="padding-top:15px; margin-left: 25px; margin-bottom:0px; font-family: arial, helvetica, sans-serif; font-weight: 500; font-size: 18px;">Cost: Free</p>
           </div>
-
-
 
 
 
@@ -106,7 +106,7 @@
 <style>
 /* Style the buttons that are used to open and close the accordion panel */
 button.accordion {
-    background-color: #f8f8f8;
+    background-color: #e8e8e8;
     color: #444;
     cursor: pointer;
     padding: 18px;
@@ -122,7 +122,8 @@ button.accordion {
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
 button.accordion-accordian, button.accordion:hover
 {
-    background-color: #ddd;
+    background-color: #ccc;
+    text-decoration: underline;
 }
 
 /* Style the accordion panel. Note: hidden by default */
@@ -142,7 +143,7 @@ div.panel-accordian
 </style>
 
 
-                <button class="accordion">Clothing, footwear and fashion buyers (2)  &nbsp;˅</button>
+                <button class="accordion">Clothing, footwear and fashion buyers (2)</button>
                 <div class="panel-accordian">
                     <div style="display: flex; flex-direction: row;">
                         <div>
@@ -192,7 +193,7 @@ div.panel-accordian
                     <p style="margin:20px;">To be added soon.</p>
                 </div>
 
-                <button class="accordion">Retail and luxury (3) &nbsp;˅</button>
+                <button class="accordion">Retail and luxury (3)</button>
                 <div class="panel-accordian">
                     <div style="display: flex; flex-direction: row;">
                         <div>
@@ -289,7 +290,7 @@ div.panel-accordian
                     <p style="margin:20px;">To be added soon.</p>
                 </div>
 
-                <button class="accordion">Household goods, furniture and furnishings (3)  &nbsp;˅</button>
+                <button class="accordion">Household goods, furniture and furnishings (3)</button>
                 <div class="panel-accordian">
                     <div style="display: flex; flex-direction: row;">
                         <div>
